iscale-dev/iscale-dev-network.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: This cloudformation template provisions a simple VPC instance with monitoring capabilities
Metadata:
  AWS::CloudFormation::Interface: 
    ParameterGroups:
      -
        Label:
          default: "Resource Configuration"
        Parameters:
          - Name
          - OrgName
          - EnvName
      -
        Label:
          default: "Network Configuration"
        Parameters:
          - VpcCidrBlock
          - CidrCount
          - MaskSize
          - LogRetentionPeriod
          - MultiAz
          - CreatePrivate
          - NatInstanceOrGateway
          - CreateMultipleNatGateway
          - CreateInternal
      - Label:
          default: Jump Host
        Parameters:
          - CreateJumpHost
          - JumpHostAMI
          - JumpHostHostname
          # - Keyname

    ParameterLabels:
      Name:
        default: "Resource Name"
      OrgName:
        default: "Organization Name"
      EnvName:
        default: "Environment Name"
      VpcCidrBlock:
        default: "VPC CIDR Block"
      CidrCount:
        default: "CIDR Count"
      MaskSize:
        default: "Mask Size"
      LogRetentionPeriod:
        default: "Log Retention Period"
      MultiAz:
        default: "Multiple Availability Zones"
      CreatePrivate:
        default: "Create Private Subnets"
      NatInstanceOrGateway:
        default: "Create NAT Instance or NAT Gateway for internet access"
      CreateMultipleNatGateway:
        default: "Create Multiple Nat Gateways"
      CreateInternal:
        default: "Create Internal Subnets"
      CreateJumpHost:
        default: Create Jump Host
      JumpHostAMI:
        default: Jump host AMI
      JumpHostHostname:
        default: Jump host hostname (e.g. jump)

Parameters: 
  Name:
    Description: Unique name/identifier (Can be client name or resource name).
    Type: String
    Default: ""
  OrgName:
    Description: The name of the organization.
    Type: String
    Default: iscale-dev
    AllowedPattern: "^[a-z]+(-[a-z]+)*$"
    ConstraintDescription: Organization must only contain lowercase letters, numbers and hyphen.
  EnvName:
    Description: The name of the environment
    Type: String
    Default: Development
    AllowedValues:
      - Production
      - Staging
      - Development
      - Test
  VpcCidrBlock:
    Description: The CIDR block for the VPC (e.g. 10.0.0.0/23)
    Type: String
    AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/\d{1,2}'
  CidrCount:
    Description: The number of CIDR to generate from the VPC CIDR Block
    Type: Number
    Default: 6
    MinValue: 1
    MaxValue: 256
  MaskSize:
    Description: The number of subnet bits for the CIDR (e.g. specifying a value "8" for this parameter will create a CIDR with a mask of "/24")
    Type: Number
    Default: 6
  LogRetentionPeriod:
    Description: The number of days to retain the log events in the specified log group
    Type: Number
    Default: 365
    AllowedValues: [1, 3, 5, 7, 14, 30, 60, 90, 120, 150, 180, 365, 400, 545, 731, 1827, 3653]
  MultiAz:
    Description: Creates resources on multiple availability zones
    Type: String
    Default: true
    AllowedValues:
      - true
      - false
  CreatePrivate:
    Description: Set to true if creation of private subnet is enabled, this creates a Nat Gateway. Otherwise, disabled.
    Type: String
    Default: false
    AllowedValues:
      - true
      - false
  CreateInternal:
    Description: Set to true if creation of internal subnet is enabled. Otherwise, disabled.
    Type: String
    Default: true
    AllowedValues:
      - true
      - false
  NatInstanceOrGateway:
    Description: |
      Select NAT instance if you need to cut cost and expects low outgoing internet traffic. This only creates 1 NAT instance for all AZ.
      Select NAT Gateway if you expect large outgoing traffic and/or requires NAT gateway for each AZ.
      This will only be applied if CreatePrivate is set to true.
    Type: String
    Default: NatGateway
    AllowedValues:
      - NatInstance
      - NatGateway
  CreateMultipleNatGateway:
    Description: |
      Set to true to create a separate Nat Gateway for each private subnets. Otherwise, it will create only one Nat Gateway for both private subnets. 
      This will only be applied if CreatePrivate is set to true and NatInstanceOrGateway is set to NatGateway.
    Type: String
    Default: false
    AllowedValues:
      - true
      - false
  CreateJumpHost:
    Description: Creates resources for a jump host into the private network
    Type: String
    Default: false
    AllowedValues:
      - true
      - false
  JumpHostAMI:
    Description: Jump host AMI ID
    Type: AWS::EC2::Image::Id
    Default: ami-0edf4a7e3058418ad # change to your AMI depends on region | AL2
  JumpHostname:
    Description: Jump host hostname (optional)
    Type: String
    Default: ''
  # Keyname:
  #   Description: The name of the EC2 key pair to allow SSH access to the instances
  #   Type: String
  #   Default: ' '
  

Conditions: 
  IsUsEast: !Equals [!Ref 'AWS::Region', us-east-1]
  IsMultiAz: !Equals [!Ref MultiAz, true]
  IsCreatePrivate: !Equals [!Ref CreatePrivate, true]
  IsNatInstance: !Equals [!Ref NatInstanceOrGateway, NatInstance]
  IsNatGateway: !Equals [!Ref NatInstanceOrGateway, NatGateway]
  IsCreateMultipleNatGateway: !Equals [!Ref CreateMultipleNatGateway, true]
  IsCreatePrivateAndNatInstance: !And [Condition: IsCreatePrivate, Condition: IsNatInstance] # create nat instance
  IsCreatePrivateAndNatGateway: !And [Condition: IsCreatePrivate, Condition: IsNatGateway] # create nat instance
  
  IsMultiAzAndPrivate: !And [Condition: IsMultiAz, Condition: IsCreatePrivate] # ok
  IsMultiAzPrivateAndCreateMultipleNatGateway: !And [Condition: IsMultiAzAndPrivate, Condition: IsNatGateway, Condition: IsCreateMultipleNatGateway] # create multiple nat gateway

  IsEitherMultiAzOrPrivate: !Or [Condition: IsMultiAz, Condition: IsCreatePrivate]

  IsCreateInternal: !Equals [!Ref CreateInternal, true]
  IsMultiAzandInternal: !And [Condition: IsMultiAz, Condition: IsCreateInternal] 

  IsCreateJumpHost: !Equals [!Ref CreateJumpHost, true]

Mappings: 
  EnvShort:
    Production:
      Name: prd
    Staging:
      Name: stg
    Development:
      Name: dev
    Test:
      Name: test
  RegionShort:
    us-east-2:
      Name: ue2
    us-east-1:
      Name: ue1
    us-west-1:
      Name: uw1
    us-west-2:
      Name: uw2
    ap-east-1:
      Name: ae1
    ap-south-1:
      Name: as1
    ap-northeast-1:
      Name: ane1
    ap-northeast-2:
      Name: ane2
    ap-northeast-3:
      Name: ane3
    ap-southeast-1:
      Name: ase1
    ap-southeast-2:
      Name: ase2
    ca-central-1:
      Name: cc1
    cn-north-1:
      Name: cn1
    cn-northwest-1:
      Name: cnw1
    eu-central-1:
      Name: ec1
    eu-west-1:
      Name: ew1
    eu-west-2:
      Name: ew2
    eu-west-3:
      Name: ew3
    eu-north-1:
      Name: en1
    me-south-1:
      Name: ms1
    sa-east-1:
      Name: se1
    us-gov-east-1:
      Name: uge1
    us-gov-west-1:
      Name: ugw1

Resources:

####
# VPC Section
####

# Actual VPC
  DefaultVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCidrBlock
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, vpc]]
      

# Default Security Group
  DefaultSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], default]]
      GroupDescription: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], default]]
      VpcId: !Ref DefaultVPC
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, default]]

# Default Route Table
  DefaultRoutTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref DefaultVPC
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, default]]

# Default Network ACLs
  DefaultNetworkAcl:
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId: !Ref DefaultVPC
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, default]]

# Default Network ACL Entries
  DefaultNetworkAclEntryIngress:
    Type: AWS::EC2::NetworkAclEntry
    Properties: 
      CidrBlock: 0.0.0.0/0
      Egress: false
      NetworkAclId: !Ref DefaultNetworkAcl
      PortRange: 
        From: 0
        To: 0
      Protocol: -1
      RuleAction: "allow"
      RuleNumber: 100

  DefaultNetworkAclEntryEgress:
    Type: AWS::EC2::NetworkAclEntry
    Properties: 
      CidrBlock: 0.0.0.0/0
      Egress: true
      NetworkAclId: !Ref DefaultNetworkAcl
      PortRange: 
        From: 0
        To: 0
      Protocol: -1
      RuleAction: "allow"
      RuleNumber: 100

# Default Network ACL Subnets
  PublicSubnetNetworkAclAssociation1:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties: 
      NetworkAclId: !Ref DefaultNetworkAcl
      SubnetId: !Ref PublicSubnet1

  PublicSubnetNetworkAclAssociation2:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Condition: IsMultiAz
    Properties: 
      NetworkAclId: !Ref DefaultNetworkAcl
      SubnetId: !Ref PublicSubnet2

  PrivateSubnetNetworkAclAssociation1:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Condition: IsCreatePrivate
    Properties: 
      NetworkAclId: !Ref DefaultNetworkAcl
      SubnetId: !Ref PrivateSubnet1

  PrivateSubnetNetworkAclAssociation2:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Condition: IsMultiAzAndPrivate
    Properties: 
      NetworkAclId: !Ref DefaultNetworkAcl
      SubnetId: !Ref PrivateSubnet2 

  InternalSubnetNetworkAclAssociation1:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Condition: IsCreateInternal
    Properties: 
      NetworkAclId: !Ref DefaultNetworkAcl
      SubnetId: !Ref InternalSubnet1

  InternalSubnetNetworkAclAssociation2:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Condition: IsMultiAzandInternal
    Properties: 
      NetworkAclId: !Ref DefaultNetworkAcl
      SubnetId: !Ref InternalSubnet2

# DHCP Options
  DefaultDhcpOptions:
    Type: AWS::EC2::DHCPOptions
    Properties: 
      DomainName: !If [IsUsEast, ec2.internal, !Sub '${AWS::Region}.compute.internal'] 
      DomainNameServers: 
        - AmazonProvidedDNS
      NtpServers: 
        - 169.254.169.123
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, dhcp-options]]

  DefaultDhcpOptionsAssociation:
    Type: AWS::EC2::VPCDHCPOptionsAssociation
    Properties: 
      DhcpOptionsId: !Ref DefaultDhcpOptions
      VpcId: !Ref DefaultVPC

# This create subnets for 2 AZs only if MultiAZ is enabled

# Public Subnet (AZ1)
  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select
        - 0
        - Fn::GetAZs: !Ref 'AWS::Region'
      VpcId: !Ref DefaultVPC
      CidrBlock: !Select [ 0, !Cidr [!Ref VpcCidrBlock, !Ref CidrCount, !Ref MaskSize]]
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, public-a]]

# Public Subnet (AZ2)
  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Condition: IsMultiAz
    Properties:
      AvailabilityZone: !Select
        - 1
        - Fn::GetAZs: !Ref 'AWS::Region'
      VpcId: !Ref DefaultVPC
      CidrBlock: !Select [ 1, !Cidr [!Ref VpcCidrBlock, !Ref CidrCount, !Ref MaskSize]]
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, public-b]]

# Private Subnet (AZ1)
  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Condition: IsCreatePrivate
    Properties:
      AvailabilityZone: !Select
        - 0
        - Fn::GetAZs: !Ref 'AWS::Region'
      VpcId: !Ref DefaultVPC
      CidrBlock: !Select [ !If [IsMultiAzAndPrivate, 2, 1] , !Cidr [!Ref VpcCidrBlock, !Ref CidrCount, !Ref MaskSize]]
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, private-a]]

# Private Subnet (AZ2)
  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Condition: IsMultiAzAndPrivate
    Properties:
      AvailabilityZone: !Select
        - 1
        - Fn::GetAZs: !Ref 'AWS::Region'
      VpcId: !Ref DefaultVPC
      CidrBlock: !Select [ 3, !Cidr [!Ref VpcCidrBlock, !Ref CidrCount, !Ref MaskSize]]
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, private-b]]

# Internal Subnet (AZ1)
  InternalSubnet1:
    Condition: IsCreateInternal
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select
        - 0
        - Fn::GetAZs: !Ref 'AWS::Region'
      VpcId: !Ref DefaultVPC
      CidrBlock: !Select [ !If [IsMultiAzandInternal, 4, 2], !Cidr [!Ref VpcCidrBlock, !Ref CidrCount, !Ref MaskSize]]
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, internal-a]]

# Internal Subnet (AZ2)
  InternalSubnet2:
    Type: AWS::EC2::Subnet
    Condition: IsMultiAzandInternal
    Properties:
      AvailabilityZone: !Select
        - 1
        - Fn::GetAZs: !Ref 'AWS::Region'
      VpcId: !Ref DefaultVPC
      CidrBlock: !Select [ 5, !Cidr [!Ref VpcCidrBlock, !Ref CidrCount, !Ref MaskSize]]
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, internal-b]]

# Internet Gateway
  DefaultInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, gateway]]

  DefaultInternetAttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref DefaultVPC
      InternetGatewayId: !Ref DefaultInternetGateway

# Public Route Table

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref DefaultVPC
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, public-route-table]]

  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref DefaultInternetGateway

  PulibcSubnetRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRouteTable

  PulibcSubnetRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Condition: IsMultiAz
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref PublicRouteTable

# Nat Gateway

  NatGatewayElasticIp1:
    Type: AWS::EC2::EIP
    Condition: IsCreatePrivateAndNatGateway
    DependsOn: DefaultInternetGateway
    Properties:
      Domain: vpc

  DefaultNatGateway1:
    Type: AWS::EC2::NatGateway
    Condition: IsCreatePrivateAndNatGateway
    Properties: 
      AllocationId: !GetAtt NatGatewayElasticIp1.AllocationId
      SubnetId: !Ref PublicSubnet1
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, nat-a]]

  NatGatewayElasticIp2:
    Type: AWS::EC2::EIP
    Condition: IsMultiAzPrivateAndCreateMultipleNatGateway
    DependsOn: DefaultInternetGateway
    Properties:
      Domain: vpc

  DefaultNatGateway2:
    Type: AWS::EC2::NatGateway
    Condition: IsMultiAzPrivateAndCreateMultipleNatGateway
    Properties: 
      AllocationId: !GetAtt NatGatewayElasticIp2.AllocationId
      SubnetId: !Ref PublicSubnet2
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, nat-b]]

###
# NAT instance
###

  EC2NatInstance:
    Condition: IsCreatePrivateAndNatInstance
    Type: AWS::EC2::Instance
    Properties: 
      ImageId: ami-079c0d2990b4033f4 # AL2 - change if needed
      InstanceType: t2.micro
      IamInstanceProfile: !Ref NatInstanceIamProfile
      Monitoring: false
      SourceDestCheck: false
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          DeviceIndex: 0
          GroupSet: [!GetAtt NatInstanceSecurityGroup.GroupId]
          SubnetId: !Ref PublicSubnet1
            # Fn::ImportValue:
            #   !Sub '${NetworkStackName}-PublicSubnetId1'
      BlockDeviceMappings:
        - DeviceName: /dev/xvda
          Ebs:
            VolumeSize: 10
      UserData:
        Fn::Base64: !Sub |
            #!/bin/bash -xe
            sudo yum install iptables-services -y
            sudo systemctl enable iptables
            sudo systemctl start iptables
            echo "net.ipv4.ip_forward=1" > /etc/sysctl.d/custom-ip-forwarding.conf
            sudo sysctl -p /etc/sysctl.d/custom-ip-forwarding.conf
            sudo /sbin/iptables -t nat -A POSTROUTING -o eth0 -j MASQUERADE
            sudo /sbin/iptables -F FORWARD
            sudo service iptables save
      Tags:
        - 
          Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, nat-instance]]

  NatInstanceIamProfile:
    Condition: IsCreatePrivateAndNatInstance
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - Ref: NatInstanceIamRole
        
  NatInstanceIamRole:
    Condition: IsCreatePrivateAndNatInstance
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Sid: 1
            Effect: Allow
            Action: sts:AssumeRole
            Principal:
              Service: ec2.amazonaws.com
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore
  
  NatInstanceSecurityGroup:
    Condition: IsCreatePrivateAndNatInstance
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: nat-instance-secg
      GroupDescription: nat-instance-secgroup
      VpcId: !Ref DefaultVPC
  
  NatInstanceSecurityGroupEgress:
    Condition: IsCreatePrivateAndNatInstance
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !GetAtt NatInstanceSecurityGroup.GroupId
      IpProtocol: -1
      FromPort: -1
      ToPort: -1
      CidrIp: "0.0.0.0/0"

# Private Route Table

# Private Route Table (AZ1)
  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Condition: IsCreatePrivate
    Properties:
      VpcId: !Ref DefaultVPC
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, private-route-table-a]]

  PrivateRoute1:
    Type: AWS::EC2::Route
    Condition: IsCreatePrivate
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !If
        - IsCreatePrivateAndNatGateway
        - !Ref DefaultNatGateway1
        - !Ref 'AWS::NoValue'
      InstanceId: !If
        - IsCreatePrivateAndNatInstance
        - !Ref EC2NatInstance
        - !Ref 'AWS::NoValue'

  PrivateSubnetRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Condition: IsCreatePrivate
    Properties:
      SubnetId: !Ref PrivateSubnet1
      RouteTableId: !Ref PrivateRouteTable1

# Private Route Table (AZ2)
  PrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Condition: IsMultiAzAndPrivate
    Properties:
      VpcId: !Ref DefaultVPC
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, private-route-table-b]]

  PrivateRoute2:
    Type: AWS::EC2::Route
    Condition: IsMultiAzAndPrivate # change if nat instance or nat gateway
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !If
        - IsMultiAzPrivateAndCreateMultipleNatGateway
        - !Ref DefaultNatGateway2
        - !If
          - IsNatGateway
          - !Ref DefaultNatGateway1
          - !Ref 'AWS::NoValue'
      InstanceId: !If
        - IsCreatePrivateAndNatInstance
        - !Ref EC2NatInstance
        - !Ref 'AWS::NoValue'

  PrivateSubnetRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Condition: IsMultiAzAndPrivate
    Properties:
      SubnetId: !Ref PrivateSubnet2
      RouteTableId: !Ref PrivateRouteTable2

# Internal Route Table

  InternalSubnetRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Condition: IsCreateInternal
    Properties:
      SubnetId: !Ref InternalSubnet1
      RouteTableId: !Ref DefaultRoutTable

  InternalSubnetRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Condition: IsMultiAzandInternal
    Properties:
      SubnetId: !Ref InternalSubnet2
      RouteTableId: !Ref DefaultRoutTable

# Flow Log

  DefaultFlowLog:
    Type: AWS::EC2::FlowLog
    Properties: 
      DeliverLogsPermissionArn: !GetAtt FlowLogIamRole.Arn
      LogGroupName: !Ref FlowLogLogGroup
      ResourceId: !Ref DefaultVPC
      ResourceType: VPC
      TrafficType: ALL

####
# CloudWatch Section
####

# FlowLog Log Group
  FlowLogLogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      RetentionInDays: !Ref LogRetentionPeriod
      LogGroupName: !Join ['-',[!Join ["",["/", !Ref OrgName]], !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], default/vpc-flow-log-group]]

####
# IAM Section
####

  FlowLogIamRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - 
            Sid: "1"
            Effect: "Allow"
            Action: "sts:AssumeRole"
            Principal:
              Service: "vpc-flow-logs.amazonaws.com"
      Policies:
        -
          PolicyName: "FlowLog-Policy"
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - 
                Sid: "1"
                Effect: "Allow"
                Action:
                  # - logs:CreateLogGroup
                  - logs:CreateLogStream
                  - logs:PutLogEvents
                  # - logs:DescribeLogGroups
                  # - logs:DescribeLogStreams
                Resource: "*"


###
# Jump Host
###

  JumpHostRole:
    Condition: IsCreateJumpHost
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
            Action:
              - sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonEC2RoleforSSM

  JumpHostInstanceProfile:
    Condition: IsCreateJumpHost
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: '/'
      Roles:
        - !Ref JumpHostRole

  JumpHostSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref DefaultVPC
      GroupDescription: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, jump, host, security, group]]
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, jump, host, security, group]]

  JumpHost:
    Condition: IsCreateJumpHost
    Type: AWS::EC2::Instance
    Properties:
      # KeyName: !Ref Keyname
      InstanceType: t3.nano
      ImageId: !Ref JumpHostAMI
      IamInstanceProfile: !Ref JumpHostInstanceProfile
      DisableApiTermination: false
      NetworkInterfaces:
        - DeviceIndex: 0
          GroupSet: 
            - !Ref JumpHostSecurityGroup
          SubnetId: !Ref PublicSubnet1
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, jump, host]]


Outputs:
  VpcId: 
    Description: The ID of the VPC
    Value: !Ref DefaultVPC
    Export:
      Name: !Sub "${AWS::StackName}-VpcId"

  VpcCidrBlock: 
    Description: The Cidr Block of the VPC
    Value: !Ref VpcCidrBlock
    Export:
      Name: !Sub "${AWS::StackName}-VpcCidrBlock"

  PublicSubnetId1: 
    Description: Public Subnet ID for AZ1
    Value: !Ref PublicSubnet1
    Export:
      Name: !Sub "${AWS::StackName}-PublicSubnetId1"

  PublicSubnetId2: 
    Condition: IsMultiAz
    Description: Public Subnet ID for AZ2
    Value: !Ref PublicSubnet2
    Export:
      Name: !Sub "${AWS::StackName}-PublicSubnetId2"

  PublicSubnetIds:
    Condition: IsMultiAz
    Description: Public Subnet Ids
    Value: !Join [',', [!Ref PublicSubnet1, !Ref PublicSubnet2]]
    Export:
      Name: !Sub "${AWS::StackName}-PublicSubnetIds"

  PrivateSubnetId1: 
    Condition: IsCreatePrivate
    Description: Private Subnet ID for AZ1
    Value: !Ref PrivateSubnet1
    Export:
      Name: !Sub "${AWS::StackName}-PrivateSubnetId1"

  PrivateSubnetId2: 
    Condition: IsMultiAzAndPrivate
    Description: Private Subnet ID for AZ2
    Value: !Ref PrivateSubnet2
    Export:
      Name: !Sub "${AWS::StackName}-PrivateSubnetId2"

  PrivateSubnetIds:
    Condition: IsMultiAzAndPrivate
    Description: Private Subnet Ids
    Value: !Join [',', [!Ref PrivateSubnet1, !Ref PrivateSubnet2]]
    Export:
      Name: !Sub "${AWS::StackName}-PrivateSubnetIds"

  InternalSubnetId1: 
    Condition: IsCreateInternal
    Description: Internal Subnet ID for AZ1
    Value: !Ref InternalSubnet1
    Export:
      Name: !Sub "${AWS::StackName}-InternalSubnetId1"

  InternalSubnetId2: 
    Condition: IsMultiAzandInternal
    Description: Internal Subnet ID for AZ2
    Value: !Ref InternalSubnet2
    Export:
      Name: !Sub "${AWS::StackName}-InternalSubnetId2"

  InternalSubnetIds:
    Condition: IsMultiAzandInternal
    Description: Internal Subnet Ids
    Value: !Join [',', [!Ref InternalSubnet1, !Ref InternalSubnet2]]
    Export:
      Name: !Sub "${AWS::StackName}-InternalSubnetIds"

  DefaultSecurityGroupId: 
    Description: The default VPC security group
    Value: !GetAtt  DefaultSecurityGroup.GroupId
    Export:
      Name: !Sub "${AWS::StackName}-DefaultSecurityGroupId"

  Region: 
    Description: The region that an Amazon VPC was created in
    Value: !Ref 'AWS::Region'
    Export:
      Name: !Sub "${AWS::StackName}-Region"
